include/agent_capi.h

typedef struct agent_error_t agent_error_t;
typedef struct agent_runner_t agent_runner_t;
typedef struct agent_runner_event_stream_t agent_runner_event_stream_t;
typedef struct agent_cancellation_t agent_cancellation_t;
typedef struct agent_run_t agent_run_t;
typedef struct agent_host_runtime_t agent_host_runtime_t;
typedef struct agent_host_vtable_t {
  size_t size;
  void* user_data;
  agent_host_model_generate_json_fn model_generate_json;
  agent_host_cancelled_fn cancelled;
} agent_host_vtable_t;
/* ----- Errors and memory ------------------------------------------------ */

/** Last error message produced by any agent_* call on the current thread. */
const char* agent_last_error(void);
/** Free a string returned by the shim (e.g. result JSON, version string). */
void agent_string_free(char* str);
/** Allocate an owned C string with the shim allocator. Free with agent_string_free. */
char* agent_string_clone(const char* str);
/** Returns the framework version string (do NOT free). */
const char* agent_version(void);
/** Returns the ABI version of this shim. */
int32_t agent_capi_abi_version(void);
/**
 * Negotiate the ABI version supported by this binary. v3 intentionally has no
 * compatibility promise with older major ABI shapes; pass min=max=4 from new
 * bindings.
 */
int32_t agent_capi_negotiate_abi_version(int32_t min_version,
                                         int32_t max_version,
                                         int32_t* out_version);
/** Returns owned JSON version metadata. Free with agent_string_free. */
int32_t agent_capi_version_info_json(char** out_version_json);
/**
 * Returns a borrowed UTF-8 JSON document describing the shipped C ABI surface:
 * version metadata, constructor names, status codes, and the serialized run /
 * stream result shapes exposed by this shim. Do NOT free the returned pointer.
 */
const char* agent_capi_contract_json(void);
/** Copy the thread-local last error into an owned error object. */
int32_t agent_last_error_object(agent_error_t** out_error);
/** Release an error object. Safe to call with NULL. */
void agent_error_release(agent_error_t* error);
/** Numeric status associated with an error object. */
int32_t agent_error_code(const agent_error_t* error);
/** Stable error type, such as ConfigurationError or CancellationError. */
const char* agent_error_type(const agent_error_t* error);
/** Human-readable error message. */
const char* agent_error_message(const agent_error_t* error);
/* ----- Host Runtime ----------------------------------------------------- */

/**
 * Create a host runtime from language-owned callbacks. The runtime handle owns
 * a copy of the vtable metadata; user_data remains host-owned.
 */
int32_t agent_host_runtime_create(const agent_host_vtable_t* vtable,
                                  agent_host_runtime_t** out_runtime);
/** Release a host runtime. Existing runners keep their own shared runtime copy. */
void agent_host_runtime_release(agent_host_runtime_t* runtime);
/** Return owned JSON describing which host model callbacks are present. */
int32_t agent_host_runtime_describe_json(agent_host_runtime_t* runtime,
                                         char** out_description_json);
/**
 * Create a runner backed by the host model callback.
 *
 * model_json may be NULL or { provider?, model?, temperature?,
 * maxOutputTokens?, capabilities?: string[] }. Host model callbacks receive
 * the framework's canonical AgentOutput JSON shape and should return the same
 * shape, or a minimal { "text": "..." } object.
 */
int32_t agent_runner_create_with_host_model(agent_host_runtime_t* runtime,
                                            const char* model_json,
                                            agent_runner_t** out_runner);
/* ----- Runner ----------------------------------------------------------- */

/**
 * Create a runner that uses the built-in echo chat model. Tools are empty.
 * Intended for smoke tests, examples, and binding integration tests with no
 * external provider configuration required.
 */
int32_t agent_runner_create_with_echo_model(agent_runner_t** out_runner);
/**
 * Release a runner created by any agent_runner_create_* function.
 * Safe to call with NULL.
 */
void agent_runner_release(agent_runner_t* runner);
/**
 * Synchronously run the agent with the given UTF-8 input string.
 *
 * `session_id` may be NULL for the default session. The result is written to
 * `*out_result_json` as a JSON object with keys:
 *   { "sessionId": "...", "text": "...", "iterationCount": <int>,
 *     "terminationReason": "..." }
 *
 * Free *out_result_json with agent_string_free.
 */
int32_t agent_runner_run(agent_runner_t* runner,
                         const char* input,
                         const char* session_id,
                         char** out_result_json);
/**
 * Synchronously run the agent with JSON input.
 *
 * `input_json` may be a JSON string, a JSON array of content parts, or a JSON
 * object representing an `AgentMessage`. Objects without `role`/`content`
 * fields are rejected so the boundary remains explicit and stable.
 *
 * Free *out_result_json with agent_string_free.
 */
int32_t agent_runner_run_json(agent_runner_t* runner,
                              const char* input_json,
                              const char* session_id,
                              char** out_result_json);
/**
 * Stream callback. Receives one JSON-encoded runner event per invocation.
 * Return non-zero to abort streaming early.
 *
 * The event JSON shape is at minimum { "type": "<event-type>" } plus any
 * additional keys specific to the event (e.g. "delta" for model text deltas,
 * "iteration" for iteration start, etc.).
 */
typedef int32_t (*agent_stream_callback_t)(const char* event_json, void* user_data);
/**
 * Synchronously stream the agent for JSON input.
 *
 * Input normalization follows the same rules as agent_runner_run_json.
 */
int32_t agent_runner_stream_json(agent_runner_t* runner,
                                 const char* input_json,
                                 const char* session_id,
                                 agent_stream_callback_t on_event,
                                 void* user_data);
/* ----- Async Run Handles ------------------------------------------------ */

/** Start one background text run. The returned handle owns the worker thread. */
int32_t agent_runner_run_async(agent_runner_t* runner,
                               const char* input,
                               const char* session_id,
                               agent_cancellation_t* cancellation,
                               agent_run_t** out_run);
/** Start one background JSON run. */
int32_t agent_runner_run_json_async(agent_runner_t* runner,
                                    const char* input_json,
                                    const char* session_id,
                                    agent_cancellation_t* cancellation,
                                    agent_run_t** out_run);
/**
 * Wait for the background run to finish and return the owned result JSON.
 * Returns the worker status when the run failed or was cancelled.
 */
int32_t agent_run_wait_json(agent_run_t* run, char** out_result_json);
/** Release a run handle, joining the worker thread if needed. */
void agent_run_release(agent_run_t* run);
/**
 * Open a pull-based runner event stream for JSON input.
 *
 * Input normalization follows the same rules as agent_runner_run_json.
 */
int32_t agent_runner_stream_events_json(agent_runner_t* runner,
                                        const char* input_json,
                                        const char* session_id,
                                        size_t capacity,
                                        agent_runner_event_stream_t** out_stream);
/**
 * Pull the next JSON-encoded stream event.
 *
 * On success, `*out_has_event` is set to 1 and `*out_event_json` owns a string
 * that must be freed with agent_string_free. When the stream is exhausted,
 * `*out_has_event` is set to 0 and `*out_event_json` is NULL.
 */
int32_t agent_runner_event_stream_next_json(agent_runner_event_stream_t* stream,
                                            char** out_event_json,
                                            int32_t* out_has_event);
/** Cancel a pull stream early with an optional UTF-8 reason. Safe to call with NULL. */
void agent_runner_event_stream_cancel(agent_runner_event_stream_t* stream,
                                      const char* reason);
/** Close a pull stream early. Safe to call with NULL. */
void agent_runner_event_stream_close(agent_runner_event_stream_t* stream);
/** Release a pull stream handle. Safe to call with NULL. */
void agent_runner_event_stream_release(agent_runner_event_stream_t* stream);