include/agent_capi_full.h

/**
 * Create a runner from a native JSON config document.
 *
 * `config_json` must be a UTF-8 JSON object accepted by the native config
 * loader. `requested_agent_id` may be NULL to resolve the default agent.
 * Relative paths inside the config are resolved from the host process current
 * working directory because no config file path is available at this boundary.
 */
int32_t agent_runner_create_from_config_json(const char* config_json,
                                             const char* requested_agent_id,
                                             agent_runner_t** out_runner);
/**
 * Create a runner from a native config file or config directory path.
 *
 * `config_path` may point at a supported JSON config file or a directory to
 * search for the default config file. JS/TS module configs are rejected at
 * this boundary because the C shim does not accept a module loader callback.
 */
int32_t agent_runner_create_from_config_path(const char* config_path,
                                             const char* requested_agent_id,
                                             agent_runner_t** out_runner);